--- a/TestProject1/TestProject1.csproj
+++ b/TestProject1/TestProject1.csproj
@@ -8,11 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-    <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
     <PackageReference Include="OpenQA.Selenium.Winium" Version="1.0.0.4" />
   </ItemGroup>
 
