--- a/TestProject1/TestProject1.csproj
+++ b/TestProject1/TestProject1.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="OpenQA.Selenium.Winium" Version="1.0.0.4" />
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
   </ItemGroup>
 
 </Project>
